--- a/rails/Dockerfile
+++ b/rails/Dockerfile
@@ -1,32 +1,24 @@
 FROM metakungfu/ruby
 
-RUN apk update \
-    && bnl-apk-install-build-deps \
-    && apk-install libxml2-dev \
-                   libxslt-dev \
-                   yaml-dev \
-                   nodejs \
-    && gem install foreman \
-    && apk del build-deps python paxctl \
-    && rm -rf /var/cache/apk/* /usr/lib/python2.7 \
-    /usr/share/man /tmp/* /var/tmp/* \
-    /usr/lib/node_modules/npm/man /usr/lib/node_modules/npm/doc \
-    /usr/lib/node_modules/npm/html
+MAINTAINER Gregory Horion <public+dockerfiles@gregory.io>
+
+COPY bin/ /usr/local/bin/
+
+RUN rails_setup
 
 WORKDIR /usr/src/app
 
-ONBUILD COPY ./Gemfile /usr/src/app/
-ONBUILD COPY ./Gemfile.lock /usr/src/app/
+ONBUILD copy ./Gemfile* /usr/src/app/
 
-ONBUILD RUN bnl-apk-install-build-deps \
-            && bundle config --global build.nokogiri --use-system-libraries \
+ONBUILD COPY bin/ /usr/local/bin
+
+ONBUILD run bnl-apk-install-build-deps \
+            && pre_bundle \
             && bundle install --system \
             && apk del build-deps
 
-ONBUILD COPY . /usr/src/app
+ONBUILD copy . /usr/src/app
 
-ONBUILD RUN chown -R app:app $WORKDIR $GEM_HOME
+ONBUILD run chown -R app:app $WORKDIR $GEM_HOME
 
-ONBUILD RUN bundle config --global frozen 1
-
-CMD foreman start
+ONBUILD run bundle config --global frozen 1
